# lmn-tools

./: .envrc  .gitignore  CLAUDE.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
.task-tracking/: README.md
.tasks/: TASKS.md
assets/mibs/: Coriant-Groove.mib
assets/templates/: template-snmp-multiinstance.json
configs/collectors/: ciena.yaml  ciena_chassis.yaml  coriant.yaml  coriant_chassis.yaml
configs/dashboards/: ban_723389.yml  ban_724636.yml
configs/junos/: rpm-probes-config.txt  snmpv3-config.txt  ssh-user-config.txt
datasources/junos/: datasource-bgp-evpn.json  datasource-cluster.json  datasource-evpn-vteps.json  datasource-evpn.json  datasource-routing-debug.json  datasource-routing.json  propertysource-cluster-detect.json
datasources/logicmonitor/: Ciena_WaveServer_Chassis.xml  Ciena_WaveServer_Interfaces.xml  Coriant_Chassis.xml  Coriant_Optical_Interfaces.xml  README.md
datasources/optical/: Infinera_Groove_StandingAlarms.json  Infinera_Line_Port_Health.json  Infinera_Port_Status.json
docs/dashboards/: README.md
docs/junos/: OID-Discovery.txt  PLAN.md  README.md  TODO.md  TROUBLESHOOTING-vtep-discovery.md  device-groups.md  logicmonitor-modules.md  rollout-plan.md
docs/junos/datasource-specs/: chassis-cluster.md  evpn-vxlan.md  routing-table.md
docs/junos/runbooks/: cluster-failover.md  evpn-alerts.md  route-table-growth.md
docs/junos/troubleshooting/: evpn-ssh-debugging.md
docs/optical/: ARCHITECTURE.md  CLAUDE_CODE_CONTEXT.md  DEPLOYMENT.md  INFINERA_GROOVE_SCRIPT_STANDING_ALARMS.md  LOGICMONITOR_SETUP.md  LogicModule_Infinera_Chassis_Health.md  LogicModule_Infinera_Groove_StandingAlarms.md  LogicModule_Infinera_Line_Port_Health.md  LogicModule_Infinera_Port_Status.md  METRICS.md  README.md  TODO.md
docs/optical/diagrams/: 01-high-level-overview.md  02-data-flow.md  03-discovery-vs-collection.md  04-script-execution.md  05-module-architecture.md  06-datasource-structure.md  07-collector-deployment.md  08-netconf-session.md  README.md
scripts/collectors/ciena/: ciena_chassis_collect.py  ciena_collect.py  ciena_discover.py
scripts/collectors/coriant/: coriant_chassis_collect.py  coriant_collect.py  coriant_discover.py
scripts/collectors/junos/: baseline-routes.py  validate-snmp.py
scripts/dashboards/: build_customer_dashboard.py  build_noc_dashboard.py
scripts/utilities/: deploy_lm_configs.py  generate_customer_dashboard.py  manage_lm_modules.py  update_datasource_group.py
src/lmn_tools/: __init__.py  constants.py
src/lmn_tools/api/: __init__.py  client.py
src/lmn_tools/auth/: __init__.py  (+1 more)
tests/api/: conftest.py  test_client.py
tests/auth/: conftest.py  test_hmac.py
tests/fixtures/: ciena_chassis_response.xml  ciena_ptp_response.xml  coriant_response.xml
tests/optical/: conftest.py  test_ciena_parser.py  test_netconf_client.py  test_output_formatter.py  test_utils.py  test_xml_parser.py
tests/services/: conftest.py  test_access.py  test_alerts.py  test_audit.py  test_batch.py  test_collectors.py  test_discovery.py  test_notifications.py  test_operations.py  test_serviceinsight.py  test_tokens.py  test_topology.py
(+97 files in other folders)
